# gaviero

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTORING_PLAN.md  TIER_ROUTING_PLAN.md  rust-toolchain.toml  test_permission_prompt.txt  tier-a-part-1-schema-and-signal.md  tier-a-part-2-surface.md  tier-b-part-1-plan.md  tier-b-part-1-retrieval-pipeline.md  tier-b-part-2-consolidation-feedback.md  tier-c-part-1-graph-and-traits.md  tier-c-part-2-storage.md  tier-s-foundation-fix-starts-from-scratch.md
.gaviero/skills/: migrate-component.md
consensus/: problem.md
crates/gaviero-cli/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/gaviero-cli/examples/: anchor_ab_live.rs
crates/gaviero-cli/src/: main.rs
crates/gaviero-cli/tests/: remember_cli.rs
crates/gaviero-core/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/gaviero-core/eval/: code_prompts.jsonl  tier1.jsonl
crates/gaviero-core/src/: diff_engine.rs  git.rs  git_conflict.rs  lib.rs  observer.rs  path_pattern.rs  query_loader.rs  scope_enforcer.rs  session_state.rs  tree_sitter.rs  types.rs  workspace.rs  write_gate.rs
crates/gaviero-core/src/acp/: client.rs  factory.rs  mod.rs  protocol.rs  session.rs
crates/gaviero-core/src/agent_session/: claude.rs  codex_app_server.rs  codex_exec.rs  cursor.rs  mod.rs  ollama.rs  registry.rs
crates/gaviero-core/src/agent_session/tool_agent/: agent_loop.rs  client.rs  config.rs  mod.rs  policy.rs  replay.rs  snapshot.rs  swarm.rs
crates/gaviero-core/src/agent_session/tool_agent/tools/: bash.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
crates/gaviero-core/src/context_planner/: bootstrap.rs  chat_memory.rs  compaction.rs  ledger.rs  mod.rs  types.rs
crates/gaviero-core/src/indent/: bracket.rs  captures.rs  config.rs  heuristic.rs  mod.rs  predicates.rs  treesitter.rs  utils.rs
crates/gaviero-core/src/iteration/: convergence.rs  mod.rs  test_generator.rs
crates/gaviero-core/src/mcp/: config_synth.rs  external_memory.rs  mod.rs  observer.rs  preflight.rs  resolver.rs  server.rs  telemetry_sink.rs  tools.rs
crates/gaviero-core/src/memory/: annotations.rs  code_graph.rs  compression.rs  consolidation.rs  consolidation_llm.rs  deletions.rs  embedder.rs  eval.rs  extractor.rs  kind.rs  mod.rs  model_manager.rs  observer.rs  onnx_embedder.rs  reembed_migration.rs  reranker.rs  retrieval.rs  schema.rs  scope.rs  scoring.rs  services.rs  session_consolidator.rs  sleeptime.rs  sleeptime_scheduler.rs  store.rs  stores.rs  telemetry.rs  trust_defaults.rs  writer.rs
crates/gaviero-core/src/memory/store/: compression_ops.rs  deletions_ops.rs  manifest.rs  mod.rs  panel_ops.rs  search.rs  search_legacy.rs  sleeptime_ops.rs  telemetry_ops.rs  write.rs
crates/gaviero-core/src/repo_map/: builder.rs  edges.rs  graph_builder.rs  mod.rs  page_rank.rs  store.rs  symbol_enrichment.rs  symbol_search.rs  topology.rs
crates/gaviero-core/src/skills/: catalog.rs  frontmatter.rs  mod.rs  template.rs
crates/gaviero-core/src/swarm/: board.rs  bus.rs  calibration.rs  context.rs  context_bundle.rs  coordinator.rs  execution_state.rs  merge.rs  mod.rs  models.rs  ollama.rs  pipeline.rs  plan.rs  planner.rs  privacy.rs  replanner.rs  router.rs  runner.rs  validation.rs  worktree_context.rs
crates/gaviero-core/src/swarm/backend/: claude_code.rs  codex.rs  cursor.rs  deepseek.rs  executor.rs  mock.rs  mod.rs  ollama.rs  runner.rs  shared.rs
crates/gaviero-core/src/swarm/verify/: combined.rs  diff_review.rs  mod.rs  structural.rs  test_runner.rs
crates/gaviero-core/src/terminal/: config.rs  context.rs  event.rs  history.rs  instance.rs  manager.rs  mod.rs  osc.rs  pty.rs  session.rs  shell_integration.rs  types.rs
crates/gaviero-core/src/validation_gate/: cargo_gate.rs  mod.rs  tree_sitter_gate.rs
crates/gaviero-core/tests/: agent_session_registry.rs  c24_trigger_disable_invariant.rs  codex_annotation_compliance.rs  cursor_annotation_compliance.rs  git_worktree_lifecycle.rs  headless_memory_services.rs  memory_session_e2e.rs  memory_testbed_e2e.rs  multi_db_memory.rs  repo_map_graph_builder.rs  swarm_branch_cleanup.rs  swarm_execution_state_checkpoint.rs  swarm_pipeline_validation.rs  tier_b_integration.rs  validation_pipeline_e2e.rs
crates/gaviero-core/tests/support/: classifier.rs  env.rs  mod.rs  orchestrator.rs  prompt_capture.rs  scripts.rs
crates/gaviero-dsl/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/gaviero-mcp-shim/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/gaviero-mcp-shim/src/: main.rs
crates/gaviero-tui/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crates/gaviero-tui/src/: app.rs  event.rs  keymap.rs  main.rs  notify.rs  theme.rs
crates/gaviero-tui/src/app/: chat_memory.rs  commands.rs  controller.rs  editing.rs  layout.rs  left_panel.rs  observers.rs  render.rs  review.rs  session.rs  side_panel.rs  state.rs
crates/gaviero-tui/src/editor/: buffer.rs  diff.rs  diff_overlay.rs  highlight.rs  markdown.rs  mod.rs  view.rs  wrap.rs
crates/gaviero-tui/src/panels/: agent_chat.rs  chat_markdown.rs  file_tree.rs  git_panel.rs  memory_panel.rs  mod.rs  search.rs  status_bar.rs  swarm_dashboard.rs  terminal.rs
crates/gaviero-tui/src/widgets/: mod.rs  render_utils.rs  scroll_state.rs  scrollbar.rs  tabs.rs  text_input.rs
crates/tree-sitter-gaviero/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/vscode/: language-configuration.json  package.json
queries/bash/: indents.scm
queries/c/: indents.scm
queries/cpp/: indents.scm
queries/css/: indents.scm
queries/gaviero/: highlights.scm  indents.scm
queries/html/: indents.scm
queries/java/: highlights.scm  indents.scm
queries/javascript/: indents.scm
queries/json/: indents.scm
queries/kotlin/: highlights.scm
queries/latex/: highlights.scm  indents.scm
queries/python/: edges.scm  highlights.scm
queries/rust/: edges.scm  highlights.scm  indents.scm
queries/toml/: indents.scm
themes/: default.toml
(+49 files in other folders)
