[workspace]
members = ["crates/gaviero-core", "crates/gaviero-tui", "crates/gaviero-cli"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
