[package]
name = "gaviero-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gaviero-cli"
path = "src/main.rs"

[dependencies]
gaviero-core = { path = "../gaviero-core" }
gaviero-dsl  = { path = "../gaviero-dsl" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
