[package]
name = "gaviero-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
similar = "2"
git2 = "0.19"
tree-sitter = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
ort = "2.0.0-rc.12"
tokenizers = "0.19"
ndarray = "0.17"
ropey = "1.6"
portable-pty = "0.9"
vt100 = "0.16"
streaming-iterator = "0.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
codebook-tree-sitter-latex = "0.6"
tree-sitter-python = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-kotlin-ng = "1.1.0"
reqwest = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
