[package]
name = "gaviero-core"
version = "0.1.0"
edition = "2024"

[features]
# C5: opt-in surface for hosted-API embedders (Voyage, Cohere, OpenAI).
# Disabled by default — local-first is the priority. Until a real
# implementation lands, the feature only unlocks a placeholder factory
# that returns NotImplemented, so the surface is reserved without
# pulling in extra deps or hiding the local-first default behind a
# silent fallback.
api-embedders = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
similar = "2"
git2 = "0.19"
tree-sitter = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
ort = "2.0.0-rc.12"
tokenizers = "0.21"
ndarray = "0.17"
ropey = "1.6"
portable-pty = "0.9"
vt100 = "0.16"
streaming-iterator = "0.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
codebook-tree-sitter-latex = "0.6"
tree-sitter-python = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-gaviero = { path = "../tree-sitter-gaviero" }
reqwest = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
sqlite-vec = "0.1.8"
sha2 = "0.10"
# Tier C / C1.4: zstd compression for old History rows. Sleeptime
# opportunistically encodes transcripts older than `compressAfterDays`
# (default 90) into `content_blob` with SHA-256 round-trip verification
# before the uncompressed `content` is cleared.
zstd = "0.13"
bincode = "1.3"
petgraph = { version = "0.8", features = ["serde-1"] }
tempfile = "3"
base64 = "0.22"
# Tier A / A5: MCP server for exposing read-only memory + graph tools to
# subprocess coding agents. `schemars` is for typed tool input schemas.
rmcp = { version = "1.5", default-features = false, features = ["server", "macros", "transport-async-rw"] }
schemars = "1.2"
toml = "0.8"
chrono = "0.4.44"
regex = "1"
walkdir = "2"

[dev-dependencies]
wiremock = "0.6"
# Tier T1 / T1.6: snapshot regression baseline for prompt structure.
# Snapshots live under crates/gaviero-core/tests/snapshots/.
insta = { version = "1", features = ["yaml"] }
