[package]
name = "gaviero-mcp-shim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gaviero-mcp-shim"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
