[package]
name = "gaviero-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gaviero"
path = "src/main.rs"

[dependencies]
gaviero-core = { path = "../gaviero-core" }
gaviero-dsl = { path = "../gaviero-dsl" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }
ropey = "1.6"
arboard = "3"
base64 = "0.22"
png = "0.17"
notify = "7"
toml = "0.8"
streaming-iterator = "0.1"
# Terminal emulation (M4)
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
